Parts of the `_configsvrShardCollection` command do not retry on network errors

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0
    • Sharding 2018-12-17, Sharding 2018-12-31, Sharding 2019-01-14, Sharding 2019-01-28, Sharding 2019-02-11
    • 34
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parts of the _configsvrShardCollection command implementation still use ScopedDbConnection for the validation logic. Because of this it does not retry on shard network errors.

      With the introduction of its _shardsvrShardCollection counterpart, this validation code can completely be pushed into the shard command, which will solve this problem.

            Assignee:
            Esha Maharishi (Inactive)
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: