SERVER-36958 Parts of the  command do not retry on network errors